[package]
name = "rgmsh"
description = "Unofficial, opinionated Rust bindings to the Gmsh API"
homepage = "https://github.com/mxxo/gmsh-rs"
documentation = "https://mxxo.github.io/rgmsh/rgmsh/index.html"

version = "0.1.2"
authors = ["Max Orok <morok@mevex.com>"]
edition = "2018"
license-file = "LICENSE.txt"

readme = "README.md"
keywords = ["ffi", "Gmsh"]
categories = ["api-bindings", "science", "simulation", "visualization"]

# refresh api bindings
[[bin]]
name = "api_gen"
path = "src/bin/api_gen.rs"

[lib]
name = "rgmsh"
path = "src/lib.rs"

[dependencies]
gmsh-sys = "0.1.2"

[dev-dependencies]
criterion = "0.2"

[badges]
maintenance = { status = "experimental" }
